--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "morgan": "^1.9.1",
     "pg": "^7.14.0",
     "uuid": "^3.3.3",
-    "winston": "^3.2.1"
+    "valid-url": "^1.0.9",
+    "winston": "^3.2.1",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
-    "postgrator-cli": "^3.3.0",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   }
 }
